--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "commander": "^2.9.0",
     "express": "^4.15.3",
     "glob": "^7.1.2",
+    "handlebars": "^4.0.10",
     "lodash": "^4.17.4"
   }
 }
