--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "backrest",
   "version": "1.0.0",
   "description": "Rails like Node framework to create simple, pure backend APIs.",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,7 @@
     "express": "^4.15.3",
     "glob": "^7.1.2",
     "handlebars": "^4.0.10",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "useragent": "^2.1.13"
   }
 }
