--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "glob": "^7.1.2",
     "handlebars": "^4.0.10",
     "lodash": "^4.17.4",
+    "nodemon": "^1.11.0",
     "useragent": "^2.1.13"
   }
 }
