--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "backrest": "bin/backrest.js"
   },
   "dependencies": {
-    "commander": "^2.9.0",
+    "commander": "tj/commander.js",
     "express": "^4.15.3",
     "glob": "^7.1.2",
     "handlebars": "^4.0.10",
