--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "lodash": "^4.17.4",
     "mkdirp": "^0.5.1",
     "nodemon": "^1.11.0",
+    "num-parser": "^1.0.0",
     "useragent": "^2.1.13"
   }
 }
