--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   ],
   "dependencies": {
     "body-parser": "^1.17.2",
-    "commander": "tj/commander.js",
+    "commander": "^2.15.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
     "forever": "^0.15.3",
