--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.18.3",
     "commander": "^2.15.1",
     "cookie-parser": "^1.4.3",
+    "dd-trace": "^0.13.1",
     "express": "^4.16.4",
     "forever": "^0.15.3",
     "glob": "^7.1.2",
